Fixed machine animations and not being collapsed by default

--- a/src/app/crafting-category-options/crafting-category-options.component.css
+++ b/src/app/crafting-category-options/crafting-category-options.component.css
@@ -23,6 +23,7 @@
     transition: height 0.5s cubic-bezier(0.77, 0, 0.175, 1);
 
     overflow: hidden;
+    will-change: transform, height;
 }
 
 .category-list {
