--- a/src/app/machine-options/machine-options.component.css
+++ b/src/app/machine-options/machine-options.component.css
@@ -20,6 +20,7 @@
     margin: 5px;
     
     filter: drop-shadow(0 0 5px white);
+    will-change: transform, height;
 }
 
 span {
